style: fixed the text overflow and image size of the article cards

--- a/web-components/search/blog-search.css
+++ b/web-components/search/blog-search.css
@@ -241,7 +241,8 @@ header nav.has-blog-nav-search {
   justify-content: flex-start;
   box-sizing: border-box;
   box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.1);
-  padding: 5px;
+  padding: 5px 5px 24px 5px;
+  overflow: hidden;
 }
 
 .nav-search-container .search-results > li > a span.search-result-tags {
@@ -280,14 +281,24 @@ header nav.has-blog-nav-search {
 
 .nav-search-container .search-results > li p {
   font-size: var(--body-font-size-s);
-  display: block;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  overflow: hidden;
+  margin: 0;
+  min-height: 0;
 }
 
 .nav-search-container .search-results > li .search-result-image {
-  /* aspect-ratio: 16 / 9; */
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  flex-shrink: 0;
+  overflow: hidden;
 }
 
-.nav-search-container .search-results > li img {
+.nav-search-container .search-results > li .search-result-image img,
+.nav-search-container .search-results > li .search-result-image picture img {
   display: block;
   object-fit: cover;
   width: 100%;
